--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Clone Repository (${{ github.event.inputs.git-ref }})
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
-          repository: 'komikku-app/komikku'
+          repository: 'komikku-app/komikku-source'
           fetch-depth: 0
           ref: ${{ github.event.inputs.git-ref }}
+          ssh-key: '${{ secrets.KOMIKKU_DEPLOY }}'
 
       - name: Validate Gradle Wrapper
         uses: gradle/actions/wrapper-validation@d156388eb19639ec20ade50009f3d199ce1e2808 # v4
@@ -107,7 +108,7 @@ jobs:
 
           echo "COMMIT_LOGS<<{delimiter}
           $(curl -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/komikku-app/komikku/compare/${{ steps.previous_commit.outputs.PREV_RELEASE_SHA }}...${{ steps.current_commit.outputs.CURRENT_SHA }}" \
+            "https://api.github.com/repos/komikku-app/komikku-source/compare/${{ steps.previous_commit.outputs.PREV_RELEASE_SHA }}...${{ steps.current_commit.outputs.CURRENT_SHA }}" \
             | jq '[.commits[]|{message:(.commit.message | split("\n")), username:.author.login}]' \
             | jq -r '.[]|"- \(.message | first) (@\(.username))"')
           {delimiter}" >> $GITHUB_OUTPUT
@@ -135,9 +136,10 @@ jobs:
       - name: Clone Repository (${{ github.event.inputs.git-ref }} - ${{ needs.prepare-build.outputs.TAG_NAME }})
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
-          repository: 'komikku-app/komikku'
+          repository: 'komikku-app/komikku-source'
           fetch-depth: 0
           ref: ${{ github.event.inputs.git-ref }}
+          ssh-key: '${{ secrets.KOMIKKU_DEPLOY }}'
 
       - name: Setup Android SDK
         run: |
@@ -258,7 +260,7 @@ jobs:
 
             ### Fix
             
-            **Full Changelog**: https://github.com/komikku-app/komikku/compare/${{ needs.prepare-build.outputs.PREV_TAG_NAME }}...${{ needs.prepare-build.outputs.TAG_NAME }}
+            **Full Changelog**: https://github.com/komikku-app/komikku-source/compare/${{ needs.prepare-build.outputs.PREV_TAG_NAME }}...${{ needs.prepare-build.outputs.TAG_NAME }}
 
             ${{ needs.prepare-build.outputs.COMMIT_LOGS }}
 
