disable prune old releases

--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -283,13 +283,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  cleaning-repo:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Prune old releases
-        uses: dev-drprasad/delete-older-releases@dfbe6be2a006e9475dfcbe5b8d201f1824c2a9fe # v0.3.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          keep_latest: 28
-          delete_tags: true
+  # cleaning-repo:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Prune old releases
+  #       uses: dev-drprasad/delete-older-releases@dfbe6be2a006e9475dfcbe5b8d201f1824c2a9fe # v0.3.4
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         keep_latest: 28
+  #         delete_tags: true
