--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Curren commit
         id: current_commit
         run: |
-          set -e
+          set -x
 
           commit_count=$(git rev-list --count HEAD)
           echo "COMMIT_COUNT=$commit_count"
@@ -59,7 +59,7 @@ jobs:
       - name: Previous commit
         id: previous_commit
         run: |
-          set -e
+          set -x
 
           commit_count_diff=$(git rev-list --count "${{ steps.last_release.outputs.tag_name }}"..HEAD)
 
@@ -77,7 +77,7 @@ jobs:
       - name: Prepare env
         id: prepare_env
         run: |
-          set -e
+          set -x
 
           tag_prefix=r
           artifacts_prefix=preview/app
@@ -91,7 +91,7 @@ jobs:
       - name: Commit logs
         id: commit_logs
         run: |
-          set -e
+          set -x
 
           echo "COMMIT_LOGS<<{delimiter}
           $(curl -H "Accept: application/vnd.github.v3+json" \
@@ -104,6 +104,8 @@ jobs:
         id: set_changelog
         if: github.event.inputs.git-ref != 'master'
         run: |
+          set -x
+
           changelog="$(git log ${{ steps.previous_commit.outputs.PREV_RELEASE_SHA }}..${{ steps.current_commit.outputs.CURRENT_SHA }} --pretty=format:'{{changelogtext}}%s (@%an){{!changelogtext}}')"
           changelog="${changelog//$'%'/%25}"
           changelog="${changelog//$'\n'/}"
@@ -144,7 +146,6 @@ jobs:
 
       - name: Write google-services.json
         uses: DamianReeves/write-file-action@6929a9a6d1807689191dcc8bbe62b54d70a32b42 # v1.3
-        if: github.event.inputs.git-ref == 'master'
         with:
           path: app/google-services.json
           contents: ${{ secrets.GOOGLE_SERVICES_JSON }}
@@ -152,7 +153,6 @@ jobs:
 
       - name: Write client_secrets.json
         uses: DamianReeves/write-file-action@6929a9a6d1807689191dcc8bbe62b54d70a32b42 # v1.3
-        if: github.event.inputs.git-ref == 'master'
         with:
           path: app/src/main/assets/client_secrets.json
           contents: ${{ secrets.GOOGLE_CLIENT_SECRETS_JSON }}
@@ -165,11 +165,9 @@ jobs:
         run: ./gradlew spotlessCheck
 
       - name: Build app
-        if: github.event.inputs.git-ref == 'master'
         run: ./gradlew assemblePreview -Pinclude-telemetry -Penable-updater
 
       - name: Run unit tests
-        if: github.event.inputs.git-ref == 'master'
         run: ./gradlew testReleaseUnitTest
 
       - name: Upload artifacts
@@ -203,7 +201,7 @@ jobs:
       - name: Get SHA & clean up build artifacts
         id: get_sha
         run: |
-          set -e
+          set -ex
 
           mv app/build/outputs/apk/${{ needs.prepare-build.outputs.ARTIFACTS_PREFIX }}-universal-preview-signed.apk Komikku-${{ needs.prepare-build.outputs.TAG_NAME }}.apk
           sha=`sha256sum Komikku-${{ needs.prepare-build.outputs.TAG_NAME }}.apk | awk '{ print $1 }'`
