Fix web deploy trigger & build release permission

--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -11,6 +11,9 @@ on:
         description: Creates a draft release (any value would create a draft)
         required: false
 
+permissions:
+  contents: write
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.inputs.git-ref }}
   cancel-in-progress: true
